# quant-res-doses

./: .gitignore  README.md  cluster_advice.md  files.csv  filesh.csv  hyper.md  package-list.txt  poly2.code-workspace  setup.cfg
data/: I0_value.csv  beta_value.csv  constants.csv  control_prothio_with_uncertainty.csv  fitted.csv  mutation_scale.csv
notebooks/: 001_rough.ipynb  002_hyper_pp.ipynb  002_initial_analysis.ipynb  003_dose_analysis.ipynb  003_report_HPs.ipynb  004_dist_analysis.ipynb  004_scan_analysis.ipynb  006_asymptote_analysis.ipynb  007_shap.ipynb  008_fung_effect_space.ipynb  009_hyperparam_opt.ipynb  010_hyperparam_opt_general.ipynb  010_rough_no_nu.ipynb  010_shap_scan_all.ipynb  011_rough_linear_model_performance.ipynb  101_fig1.ipynb  101_fig1B.ipynb  102_fig2.ipynb  102_fig2A.ipynb  102_initial_analysis.ipynb  102_rough.ipynb  103_dose_analysis.ipynb  103_fig3.ipynb  10456_fig456.ipynb  104_fig4.ipynb  105_fig5.ipynb  107_fig7.ipynb  111_app1.ipynb  112_app2.ipynb  112_app_gbm_model_performance_grid.ipynb  112_app_gbm_model_performance_scatter.ipynb  113_app_Y10.ipynb  113_app_Y10_like_F56.ipynb  113_app_cumulative_1_like_F2.ipynb  113_app_cumulative_2.ipynb  113_app_cumulative_2_like_F3.ipynb  113_app_cumulative_3AB.ipynb  113_app_cumulative_3_like_F5.ipynb  113_app_cumulative_5AB.ipynb  113_app_dists.ipynb  (+25 more)
notebooks/old/: 101_fig1.ipynb  111_fig1.ipynb  113_fig3.ipynb
notebooks/old_0909/: 002_initial_analysis.ipynb  006_asymptote_analysis.ipynb  007_shap.ipynb  010_hyperparam_opt_general.ipynb  020_SHAP_all.ipynb  (+7 more)
src/: README.md
(+83 files in other folders)
