[metadata]
name = polygenic2-nt409
version = 0.0.1
author = Nick Taylor
author_email = nt409@cam.ac.uk
description = Polygenic fungicide resistance model 2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nt409/polygenic2
project_urls =
    Bug Tracker = https://github.com/nt409/polygenic2
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src